commit iniciando lógica del programa, ultima actualización 09/12/2019

--- a/ut5_Actividad_1/ut5_Actividad_1.csproj
+++ b/ut5_Actividad_1/ut5_Actividad_1.csproj
@@ -123,5 +123,8 @@
   <ItemGroup>
     <Resource Include="imagenes\enviarMensaje.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="imagenes\chatBot.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
