Commit Prueba Conexion OK

--- a/ut5_Actividad_1/App.config
+++ b/ut5_Actividad_1/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="ut5_Actividad_1.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
@@ -11,4 +16,17 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <applicationSettings>
+    <ut5_Actividad_1.Properties.Settings>
+      <setting name="EndPoint" serializeAs="String">
+        <value>https://actividad51luisnarvaez.azurewebsites.net</value>
+      </setting>
+      <setting name="Id" serializeAs="String">
+        <value>c3845dbd-79d1-43a0-8958-9a248d779c75</value>
+      </setting>
+      <setting name="Key" serializeAs="String">
+        <value>2ad9ca5b-3e55-4cc1-882e-c695a7ef2e0e</value>
+      </setting>
+    </ut5_Actividad_1.Properties.Settings>
+  </applicationSettings>
 </configuration>
