--- a/ut5_Actividad_1/ut5_Actividad_1.csproj
+++ b/ut5_Actividad_1/ut5_Actividad_1.csproj
@@ -135,5 +135,8 @@
   <ItemGroup>
     <Resource Include="imagenes\chatBot.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="imagenes\usuario.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
