--- a/ut5_Actividad_1/ut5_Actividad_1.csproj
+++ b/ut5_Actividad_1/ut5_Actividad_1.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Configuracion.xaml.cs">
       <DependentUpon>Configuracion.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CustomCommands.cs" />
     <Compile Include="ItemColor.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
