--- a/ut5_Actividad_1/App.config
+++ b/ut5_Actividad_1/App.config
@@ -4,6 +4,9 @@
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="ut5_Actividad_1.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="ut5_Actividad_1.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
@@ -29,4 +32,17 @@
       </setting>
     </ut5_Actividad_1.Properties.Settings>
   </applicationSettings>
+  <userSettings>
+    <ut5_Actividad_1.Properties.Settings>
+      <setting name="ColorFondo" serializeAs="String">
+        <value>White</value>
+      </setting>
+      <setting name="ColorUsuario" serializeAs="String">
+        <value>White</value>
+      </setting>
+      <setting name="ColorRobot" serializeAs="String">
+        <value>White</value>
+      </setting>
+    </ut5_Actividad_1.Properties.Settings>
+  </userSettings>
 </configuration>
