--- a/ut5_Actividad_1/ut5_Actividad_1.csproj
+++ b/ut5_Actividad_1/ut5_Actividad_1.csproj
@@ -87,7 +87,6 @@
       <DependentUpon>Configuracion.xaml</DependentUpon>
     </Compile>
     <Compile Include="CustomCommands.cs" />
-    <Compile Include="ItemColor.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -138,6 +137,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="imagenes\usuario.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="imagenes\robot.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
